--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                 updateMetadata(reel);
                 nextVideoPreloaded = false; // Reset for next preload
 
-                window.history.pushState({}, document.title, `/BTF/handled/?reelId=${allReels[index].reelId}`);
+                window.history.pushState({}, document.title, `/Instagram/?reelId=${allReels[index].reelId}`);
             }
 
             function nextReel() {
