--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="user-info">
             <div class="username" id="username">
                 <span id="username-text">Loading...</span>
-                <img class="verify-badge" id="verify-badge" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Twitter_Verified_Badge_Gold.svg/2048px-Twitter_Verified_Badge_Gold.svg.png">
+                <img class="verify-badge" id="verify-badge" src="https://i.postimg.cc/28DChkBZ/1000062918-removebg-preview-min.png">
             </div>
         </div>
     </div>
